--- a/.github/workflows/integration-docker.yml
+++ b/.github/workflows/integration-docker.yml
@@ -5,9 +5,11 @@ jobs:
     docker:
         runs-on: ubuntu-latest
         steps:
+            - name: checkout
+              uses: actions/checkout@v4
             - name: docker build
               run: |
-                docker build -f Dockerfile.cicd
+                docker build -f Dockerfile.cicd .
             
 
 
