--- a/.github/workflows/integration-docker.yml
+++ b/.github/workflows/integration-docker.yml
@@ -5,11 +5,18 @@ jobs:
     docker:
         runs-on: ubuntu-latest
         steps:
-            - name: checkout
+            - name: Checkout
               uses: actions/checkout@v4
+            - name: Docker meta
+              id: meta
+              uses: docker/metadata-action@v5
+      
             - name: docker build
               run: |
-                docker build -f Dockerfile.cicd .
+                docker build -f Dockerfile.cicd \
+                  --tag ${{ steps.meta.outputs.tags }} \
+                  --label ${{ steps.meta.outputs.labels }} \
+                  .
             
 
 
