--- a/.github/workflows/integration-docker.yml
+++ b/.github/workflows/integration-docker.yml
@@ -14,8 +14,8 @@ jobs:
             - name: docker build
               run: |
                 docker build -f Dockerfile.cicd \
-                  --tag ${{ steps.meta.outputs.tags }} \
-                  --label ${{ steps.meta.outputs.labels }} \
+                  --tag "${{ steps.meta.outputs.tags }}" \
+                  --label "${{ steps.meta.outputs.labels }}" \
                   .
             
 
