--- a/.github/workflows/integration-docker.yml
+++ b/.github/workflows/integration-docker.yml
@@ -7,16 +7,27 @@ jobs:
         steps:
             - name: Checkout
               uses: actions/checkout@v4
+
             - name: Docker meta
               id: meta
               uses: docker/metadata-action@v5
-      
+              with:
+                images: ghcr.io/${{ github.repository_owner }}
+
+            - name: Login to GitHub Container Registry
+              uses: docker/login-action@v3
+              with:
+                registry: ghcr.io
+                username: ${{ github.repository_owner }}
+                password: ${{ secrets.GITHUB_TOKEN }}
+
             - name: docker build
               run: |
                 docker build -f Dockerfile.cicd \
                   --tag "${{ steps.meta.outputs.tags }}" \
                   --label "${{ steps.meta.outputs.labels }}" \
                   .
+                docker push --all-tags ghcr.io/${{ github.repository_owner }}
             
 
 
