--- a/.github/workflows/integration-docker.yml
+++ b/.github/workflows/integration-docker.yml
@@ -12,7 +12,7 @@ jobs:
               id: meta
               uses: docker/metadata-action@v5
               with:
-                images: ghcr.io/${{ github.repository_owner }}
+                images: ghcr.io/${{ github.repository }}
 
             - name: Login to GitHub Container Registry
               uses: docker/login-action@v3
@@ -27,7 +27,7 @@ jobs:
                   --tag "${{ steps.meta.outputs.tags }}" \
                   --label "${{ steps.meta.outputs.labels }}" \
                   .
-                docker push --all-tags ghcr.io/${{ github.repository_owner }}
+                docker push --all-tags ghcr.io/${{ github.repository }}
             
 
 
