--- a/.github/workflows/integration-docker.yml
+++ b/.github/workflows/integration-docker.yml
@@ -13,6 +13,7 @@ jobs:
               uses: docker/metadata-action@v5
               with:
                 images: ghcr.io/${{ github.repository }}
+                labels: org.opencontainers.image.source=${{ github.repository_url }}
 
             - name: Login to GitHub Container Registry
               uses: docker/login-action@v3
