--- a/Dockerfile.cicd
+++ b/Dockerfile.cicd
@@ -3,7 +3,8 @@ COPY . /opt/work
 WORKDIR /opt/work
 RUN ./mvnw package
 
-FROM eclipse-temurin:17-jre
+#FROM eclipse-temurin:17-jre
+FROM eclipse-temurin:17_35-jdk
 RUN mkdir /opt/app
 WORKDIR /opt/app
 COPY --from=build /opt/work/target/*.jar .
