--- a/.github/workflows/integration-docker.yml
+++ b/.github/workflows/integration-docker.yml
@@ -1,57 +1,81 @@
 name: integration with docker
-on: [push]
+
+on:
+  push:
+    branches: [ $default-branch ]
+    tags: [ 'v*.*.*' ]
+  pull_request:
+    branches: [ $default-branch ]
 
 permissions: 
   packages: write
   security-events: write
-  
+
+env:
+  REGISTRY: ghcr.io
+  REGISTRY_USER: ${{ github.actor }}
+  REGISTRY_PASS: ${{ secrets.GITHUB_TOKEN }}
+  IMAGE_NAME: ${{ github.repository }}
+
 jobs:
-    docker:
-        runs-on: ubuntu-latest
-        steps:
-            - name: Docker Metadata
-              id: meta
-              uses: docker/metadata-action@v5
-              with:
-                images: ghcr.io/${{ github.repository }}
-                labels: org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Docker Metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          labels: org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
 
-            - name: Login to GitHub Container Registry
-              uses: docker/login-action@v3
-              with:
-                registry: ghcr.io
-                username: ${{ github.repository_owner }}
-                password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ env.REGISTRY_USER }}
+          password: ${{ env.REGISTRY_PASS }}
 
-            - name: Docker Build
-              id: build
-              uses: docker/build-push-action@v6
-              with:
-                load: true
-                file: Dockerfile.cicd
-                tags: ${{ steps.meta.outputs.tags }}
-                labels: ${{ steps.meta.outputs.labels }}
+      - name: Docker Build
+        id: build
+        uses: docker/build-push-action@v6
+        with:
+          load: true
+          file: Dockerfile.cicd
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
 
-            - name: Run Trivy Scanner
-              uses: aquasecurity/trivy-action@0.30.0
-              with:
-                scan-type: image
-                scan-ref: ${{ steps.build.outputs.imageid }}
-                output: trivy-results.sarif
-                format: sarif
-                severity: "CRITICAL,HIGH"
-                exit-code: 1
+      # Code Security must be enbled for SARIF
+      # - name: Run Trivy Scanner - SARIF
+      #   uses: aquasecurity/trivy-action@0.30.0
+      #   with:
+      #     scan-ref: ${{ steps.build.outputs.imageid }}
+      #     format: sarif
+      #     output: trivy-results.sarif
 
-            - name: Upload Trivy scan results to GitHub Security tab
-              uses: github/codeql-action/upload-sarif@v3
-              if: always()
-              with:
-                sarif_file: trivy-results.sarif
+      # - name: Upload Trivy scan results to GitHub Security tab
+      #   uses: github/codeql-action/upload-sarif@v3
+      #   if: always()
+      #   with:
+      #     sarif_file: trivy-results.sarif
 
-            - name: Docker Push
-              uses: docker/build-push-action@v6
-              with:
-                push: true
-                file: Dockerfile.cicd
-                tags: ${{ steps.meta.outputs.tags }}
-                labels: ${{ steps.meta.outputs.labels }}
+      - name: Run Trivy Scanner
+        uses: aquasecurity/trivy-action@0.30.0
+        with:
+          scan-ref: ${{ steps.build.outputs.imageid }}
+          severity: CRITICAL,HIGH
+          exit-code: 1
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          subject-digest: 'sha256:fedcba0...'
+          push-to-registry: true
+            
+      - name: Docker Push
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          file: Dockerfile.cicd
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
