Replace placeholder $default-branch with main - only applyable for workflow templates

--- a/.github/workflows/integration-docker.yml
+++ b/.github/workflows/integration-docker.yml
@@ -2,10 +2,10 @@ name: integration with docker
 
 on:
   push:
-    branches: [ $default-branch ]
+    branches: [ main ]
     tags: [ 'v*.*.*' ]
   pull_request:
-    branches: [ $default-branch ]
+    branches: [ main ]
 
 permissions: 
   packages: write
