--- a/.github/workflows/integration-docker.yml
+++ b/.github/workflows/integration-docker.yml
@@ -10,7 +10,10 @@ on:
 permissions: 
   packages: write
   security-events: write
-
+  id-token: write
+  contents: read
+  attestations: write
+  
 env:
   REGISTRY: ghcr.io
   REGISTRY_USER: ${{ github.actor }}
@@ -65,17 +68,18 @@ jobs:
           severity: CRITICAL,HIGH
           exit-code: 1
 
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v2
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          subject-digest: 'sha256:fedcba0...'
-          push-to-registry: true
-            
       - name: Docker Push
+        id: push
         uses: docker/build-push-action@v6
         with:
           push: true
           file: Dockerfile.cicd
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Generate artifact attestation
+        uses: actions/attest-build-provenance@v2
+        with:
+          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
