--- a/.github/workflows/integration-docker.yml
+++ b/.github/workflows/integration-docker.yml
@@ -42,7 +42,8 @@ jobs:
         id: build
         uses: docker/build-push-action@v6
         with:
-          load: true
+          #load: true
+          push: true
           file: Dockerfile.cicd
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
