--- a/.github/workflows/integration-docker.yml
+++ b/.github/workflows/integration-docker.yml
@@ -48,6 +48,7 @@ jobs:
           #load: true
           push: true
           provenance: mode=max
+          sbom: true 
           file: Dockerfile.cicd
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -69,18 +70,18 @@ jobs:
       - name: Run Trivy Scanner
         uses: aquasecurity/trivy-action@0.30.0
         with:
-          scan-ref: ${{ steps.build.outputs.imageid }}
+          scan-ref: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.DOCKER_METADATA_OUTPUT_VERSION }}
           severity: CRITICAL,HIGH
           exit-code: 1
 
-      - name: Docker Push
-        id: push
-        uses: docker/build-push-action@v6
-        with:
-          push: true
-          file: Dockerfile.cicd
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+      # - name: Docker Push
+      #   id: push
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     push: true
+      #     file: Dockerfile.cicd
+      #     tags: ${{ steps.meta.outputs.tags }}
+      #     labels: ${{ steps.meta.outputs.labels }}
 
       # - name: Generate artifact attestation
       #   uses: actions/attest-build-provenance@v2
